security: implement JWT authentication and lock down the API
Closes the four critical findings from the audit, which were interlocking.

C1 -- the entire API was public. SecurityConfig permitted /api/** while every
controller was mounted under /api, so anonymous callers had full CRUD over
users, properties, and financial records. Rewritten with the Spring Security 6
lambda DSL: STATELESS sessions, an explicit public allowlist, and
anyRequest().authenticated() as the default, so a new controller is protected
unless someone deliberately opens it.

C4 -- the README advertised JWT authentication that did not exist. There was no
JWT library on the classpath. Sign-in verified credentials, wrote the result to
SecurityContextHolder -- thread-local, cleared at end of request -- and returned
a plain string, so the client received nothing it could present later. Now
implemented with JJWT: HS256, signature and expiry verified on every request by
a OncePerRequestFilter.

C3 -- POST /api/users persisted the submitted password unhashed, producing
accounts that could never sign in. The encoding step lived in a controller, so
a second controller bypassed it. Registration now has exactly one entry point,
UserService.register, which owns hashing and role assignment.

C5 -- responses serialised the BCrypt hash, because User implements UserDetails
and so must expose getPassword(). Auth endpoints now return records that simply
have no password component.

Also in scope because they could not be separated cleanly:
- Role (USER/ADMIN) persisted via V2, replacing a hardcoded authority
- V3 replaces the case-sensitive unique constraints on email and username with
  functional unique indexes on lower(...). The previous constraints allowed
  User@x.com and user@x.com to coexist as separate accounts. Repository lookups
  use explicit lower() predicates so they can actually use those indexes --
  Spring Data's IgnoreCase derivation emits upper() and would force a seq scan.
- GlobalExceptionHandl