@@ -1,84 +1,111 @@
 package com.hoseacodes.propflow.model;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
+
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
 import jakarta.persistence.Table;
 import jakarta.persistence.Version;
 
+/**
+ * A user account, which doubles as the Spring Security principal.
+ *
+ * <p>Implementing {@link UserDetails} forces a public {@code getPassword()},
+ * which Jackson would otherwise serialise into every response containing a
+ * user. This class must therefore never be returned from a controller -- the
+ * {@code dto.response} package exists for that. The {@link JsonIgnore}
+ * annotations below are defence in depth, not the primary control.
+ */
 @Entity
-@Table(name = "users") 
+@Table(name = "users")
 public class User implements UserDetails {
-  
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-    @Column(unique = true)
+
+    @Column(nullable = false, unique = true)
     private String email;
-    private String password;
-    private String firstName;
-    private String lastName;
-    @Column(unique = true)
+
+    @Column(nullable = false, unique = true)
     private String username;
 
+    @Column(nullable = false)
+    private String password;
+
+    private String firstName;
+
+    private String lastName;
+
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false, length = 20)
+    private Role role = Role.USER;
+
+    /**
+     * Optimistic locking counter. Managed entirely by JPA -- application code
+     * must never set it. The previous signup path explicitly nulled this field
+     * before saving, which fought the mechanism rather than using it; a null
+     * identifier is what marks an entity as new.
+     */
     @Version
     @Column(name = "version", nullable = false)
-    private Long version = 0L; // Initialize with 0
-    
+    private Long version;
 
     @Override
+    @JsonIgnore
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Here you can return roles or authorities
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
-    }
-
-    public Long getVersion() {
-        return version;
-    }
-
-    public void setVersion(Long version) {
-        this.version = version;
+        // Spring Security's hasRole("ADMIN") checks for the authority
+        // "ROLE_ADMIN"; the prefix is a convention it applies itself.
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
+    @JsonIgnore
     public String getPassword() {
-        return this.password;
+        return password;
     }
 
     @Override
     public String getUsername() {
-        return this.username;
+        return username;
     }
 
     @Override
+    @JsonIgnore
     public boolean isAccountNonExpired() {
         return true;
     }
 
     @Override
+    @JsonIgnore
     public boolean isAccountNonLocked() {
         return true;
     }
 
     @Override
+    @JsonIgnore
     public boolean isCredentialsNonExpired() {
         return true;
     }
 
     @Override
+    @JsonIgnore
     public boolean isEnabled() {
         return true;
     }
-  
+
     public Long getId() {
         return id;
     }
@@ -93,6 +120,10 @@ public class User implements UserDetails {
 
     public void setEmail(String email) {
         this.email = email;
+    }
+
+    public void setUsername(String username) {
+        this.username = username;
     }
 
     public void setPassword(String password) {
@@ -113,5 +144,17 @@ public class User implements UserDetails {
 
     public void setLastName(String lastName) {
         this.lastName = lastName;
+    }
+
+    public Role getRole() {
+        return role;
+    }
+
+    public void setRole(Role role) {
+        this.role = role;
+    }
+
+    public Long getVersion() {
+        return version;
     }
 }
